Small fixes (#1593)
* Update torrent_file_missing.jet.html

* Update en-us.all.json

* Update CHANGELOG.md

* Update main.css

* Update upload.jet.html

* Remove unused refine inputs from URL when doing a refine search

* fix cookie warning not showing up

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1912,6 +1912,9 @@ span.tag {
 p.upload-rules {
     margin-top: 0;
 }
+p.upload-rules a {
+    text-decoration: underline;
+}
 #upload-button {
     width: 120px;
 }
